--- a/src/adapters/http/views/inventory.hbs
+++ b/src/adapters/http/views/inventory.hbs
@@ -21,14 +21,14 @@
             <tr>
                 <td>{{>cardsOwned card=this}}</td>
                 <td>
-                    <a href="{{card.url}}">{{card.name}}</a>
-                    <img src="{{card.imgSrc}}" alt="{{card.name}}" />
+                    <a href="{{this.url}}">{{this.name}}</a>
+                    <img src="{{this.imgSrc}}" alt="{{this.name}}" />
                 </td>
                 <td>
-                    <i class="ss ss-{{card.setCode}} ss-fw"></i>
-                    <a href="/sets/{{card.setCode}}">{{card.setCode}}</a>
+                    <i class="ss ss-{{this.setCode}} ss-fw"></i>
+                    <a href="/sets/{{this.setCode}}">{{this.setCode}}</a>
                 </td>
-                <td>{{#if card.price}}{{card.price}}{{else}}0{{/if}}</td>
+                <td>{{#if this.price}}{{this.price}}{{else}}0{{/if}}</td>
             </tr>
         {{/each}}
         </tbody>
