--- a/src/adapters/http/public/css/tailwind.css
+++ b/src/adapters/http/public/css/tailwind.css
@@ -23,7 +23,7 @@
   --tw-ring-inset:  ;
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
-  --tw-ring-color: rgb(59 130 246 / 0.5);
+  --tw-ring-color: rgb(113 88 252 / 0.5);
   --tw-ring-offset-shadow: 0 0 #0000;
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
@@ -77,7 +77,7 @@
   --tw-ring-inset:  ;
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
-  --tw-ring-color: rgb(59 130 246 / 0.5);
+  --tw-ring-color: rgb(113 88 252 / 0.5);
   --tw-ring-offset-shadow: 0 0 #0000;
   --tw-ring-shadow: 0 0 #0000;
   --tw-shadow: 0 0 #0000;
@@ -577,11 +577,11 @@ video {
   --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
-  --tw-ring-color: #2563eb;
+  --tw-ring-color: #633af1;
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  border-color: #2563eb;
+  border-color: #633af1;
 }
 
 input::-moz-placeholder, textarea::-moz-placeholder {
@@ -648,7 +648,7 @@ select {
   flex-shrink: 0;
   height: 1rem;
   width: 1rem;
-  color: #2563eb;
+  color: #633af1;
   background-color: #fff;
   border-color: #6b7280;
   border-width: 1px;
@@ -669,7 +669,7 @@ select {
   --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
   --tw-ring-offset-width: 2px;
   --tw-ring-offset-color: #fff;
-  --tw-ring-color: #2563eb;
+  --tw-ring-color: #633af1;
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -1558,11 +1558,11 @@ select {
   --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
   --tw-ring-offset-width: 0px;
   --tw-ring-offset-color: #fff;
-  --tw-ring-color: #2563eb;
+  --tw-ring-color: #633af1;
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(1px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
-  border-color: #2563eb;
+  border-color: #633af1;
 }
 
 .form-input::-moz-placeholder, .form-textarea::-moz-placeholder {
@@ -1629,7 +1629,7 @@ select {
   flex-shrink: 0;
   height: 1rem;
   width: 1rem;
-  color: #2563eb;
+  color: #633af1;
   background-color: #fff;
   border-color: #6b7280;
   border-width: 1px;
@@ -1650,7 +1650,7 @@ select {
   --tw-ring-inset: var(--tw-empty,/*!*/ /*!*/);
   --tw-ring-offset-width: 2px;
   --tw-ring-offset-color: #fff;
-  --tw-ring-color: #2563eb;
+  --tw-ring-color: #633af1;
   --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow);
@@ -1990,7 +1990,7 @@ select {
 
 .bg-purple-600 {
   --tw-bg-opacity: 1;
-  background-color: rgb(154 0 157 / var(--tw-bg-opacity, 1));
+  background-color: rgb(140 70 179 / var(--tw-bg-opacity, 1));
 }
 
 .bg-white {
@@ -2081,12 +2081,12 @@ select {
 
 .text-purple-600 {
   --tw-text-opacity: 1;
-  color: rgb(154 0 157 / var(--tw-text-opacity, 1));
+  color: rgb(140 70 179 / var(--tw-text-opacity, 1));
 }
 
 .text-teal-500 {
   --tw-text-opacity: 1;
-  color: rgb(0 157 154 / var(--tw-text-opacity, 1));
+  color: rgb(40 173 168 / var(--tw-text-opacity, 1));
 }
 
 .text-white {
@@ -2133,7 +2133,7 @@ select {
   width: 100%;
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(0 157 154 / var(--tw-bg-opacity, 1));
+  background-color: rgb(40 173 168 / var(--tw-bg-opacity, 1));
   padding-top: 0.75rem;
   padding-bottom: 0.75rem;
   font-weight: 600;
@@ -2146,7 +2146,7 @@ select {
 
 .btn-primary:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(13 148 136 / var(--tw-bg-opacity, 1));
+  background-color: rgb(28 133 132 / var(--tw-bg-opacity, 1));
 }
 
 .btn-primary:focus {
@@ -2154,7 +2154,7 @@ select {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(4px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(141 225 224 / var(--tw-ring-opacity, 1));
+  --tw-ring-color: rgb(110 218 209 / var(--tw-ring-opacity, 1));
 }
 
 .btn-secondary {
@@ -2188,19 +2188,19 @@ select {
   --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(2px + var(--tw-ring-offset-width)) var(--tw-ring-color);
   box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(0 157 154 / var(--tw-ring-opacity, 1));
+  --tw-ring-color: rgb(40 173 168 / var(--tw-ring-opacity, 1));
 }
 
 .input-label {
   display: block;
   font-weight: 500;
   --tw-text-opacity: 1;
-  color: rgb(0 157 154 / var(--tw-text-opacity, 1));
+  color: rgb(40 173 168 / var(--tw-text-opacity, 1));
 }
 
 .link {
   --tw-text-opacity: 1;
-  color: rgb(154 0 157 / var(--tw-text-opacity, 1));
+  color: rgb(140 70 179 / var(--tw-text-opacity, 1));
 }
 
 .link:hover {
@@ -2212,7 +2212,7 @@ select {
   max-width: 28rem;
   border-radius: 0.5rem;
   --tw-bg-opacity: 1;
-  background-color: rgb(204 251 241 / var(--tw-bg-opacity, 1));
+  background-color: rgb(209 246 241 / var(--tw-bg-opacity, 1));
   padding: 2rem;
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
@@ -2234,7 +2234,7 @@ select {
 
 .navbar-link:hover {
   --tw-text-opacity: 1;
-  color: rgb(204 251 241 / var(--tw-text-opacity, 1));
+  color: rgb(209 246 241 / var(--tw-text-opacity, 1));
 }
 
 .navbar-link-mobile {
@@ -2253,7 +2253,7 @@ select {
 
 .navbar-link-mobile:hover {
   --tw-text-opacity: 1;
-  color: rgb(204 251 241 / var(--tw-text-opacity, 1));
+  color: rgb(209 246 241 / var(--tw-text-opacity, 1));
 }
 
 .page-title {
@@ -2262,7 +2262,7 @@ select {
   line-height: 2rem;
   font-weight: 700;
   --tw-text-opacity: 1;
-  color: rgb(0 157 154 / var(--tw-text-opacity, 1));
+  color: rgb(40 173 168 / var(--tw-text-opacity, 1));
 }
 
 .page-subtitle {
@@ -2271,7 +2271,7 @@ select {
   font-size: 0.875rem;
   line-height: 1.25rem;
   --tw-text-opacity: 1;
-  color: rgb(154 0 157 / var(--tw-text-opacity, 1));
+  color: rgb(140 70 179 / var(--tw-text-opacity, 1));
 }
 
 .hover\:prose-lg:hover {
@@ -3791,7 +3791,7 @@ select {
 
 .hover\:text-teal-600:hover {
   --tw-text-opacity: 1;
-  color: rgb(13 148 136 / var(--tw-text-opacity, 1));
+  color: rgb(28 133 132 / var(--tw-text-opacity, 1));
 }
 
 .hover\:underline:hover {
@@ -3821,7 +3821,7 @@ select {
 
 .focus\:ring-blue-300:focus {
   --tw-ring-opacity: 1;
-  --tw-ring-color: rgb(147 197 253 / var(--tw-ring-opacity, 1));
+  --tw-ring-color: rgb(158 159 255 / var(--tw-ring-opacity, 1));
 }
 
 .prose-headings\:text-ellipsis :is(:where(h1, h2, h3, h4, h5, h6, th):not(:where([class~="not-prose"],[class~="not-prose"] *))) {
