--- a/src/adapters/http/views/partials/breadcrumbs.hbs
+++ b/src/adapters/http/views/partials/breadcrumbs.hbs
@@ -5,7 +5,7 @@
                 <span class="breadcrumb-item active" aria-current="page">{{label}}</span>
             {{else}}
                 <span class="breadcrumb-item">
-                    <a class="link" href="{{url}}">{{label}} / </a>
+                    <a class="link" href="{{url}}">{{label}}</a><span> / </span>
                 </span>
             {{/if}}
         {{/each}}
