--- a/src/http/views/setListPage.hbs
+++ b/src/http/views/setListPage.hbs
@@ -29,3 +29,27 @@
         {{/each}}
     </tbody>
 </table>
+
+<div class="pagination flex items-center justify-center space-x-1 mt-4">
+    {{#if this.pagination.hasPrevPage}}
+    <a href="/sets?page={{this.pagination.prevPage}}"
+        class="pagination-link px-3 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Previous</a>
+    {{/if}}
+
+    {{#each this.pagination.prevPages}}
+    <a href="/sets?page={{this}}"
+        class="pagination-link px-3 py-2 bg-gray-200 text-gray-700 rounded hover:bg-gray-300">{{this}}</a>
+    {{/each}}
+
+    <span class="pagination-current px-3 py-2 bg-blue-600 text-white rounded">{{this.pagination.currentPage}}</span>
+
+    {{#each this.pagination.nextPages}}
+    <a href="/sets?page={{this}}"
+        class="pagination-link px-3 py-2 bg-gray-200 text-gray-700 rounded hover:bg-gray-300">{{this}}</a>
+    {{/each}}
+
+    {{#if this.pagination.hasNextPage}}
+    <a href="/sets?page={{this.pagination.nextPage}}"
+        class="pagination-link px-3 py-2 bg-blue-500 text-white rounded hover:bg-blue-600">Next</a>
+    {{/if}}
+</div>
